# stair-flask

./: .dockerignore  .flaskenv  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  README.md  config.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run.py  tailwind.config.js
.github/: renovate.json
.github/workflows/: linting.yaml  tests.yaml
app/: .env.example  __init__.py  config.py  const.py  exceptions.py  led_controller.py  mqtt_controller.py  thread.py
app/blueprints/auth/: __init__.py  forms.py  models.py
app/blueprints/auth/templates/: login.html  register.html
app/blueprints/auth/templates/includes/: auth_logo.html
app/blueprints/backend/: __init__.py  forms.py  models.py
app/blueprints/backend/templates/: dashboard.html
app/blueprints/backend/templates/admin/: dashboard.html  led_control.html  users.html
app/blueprints/backend/templates/admin/includes/: _sensor_state.html  _sidebar.html
app/blueprints/backend/templates/admin/includes/modals/sensor/: add.html
app/blueprints/backend/templates/admin/includes/modals/workout/: add.html  delete.html  update.html
app/blueprints/backend/templates/admin/includes/topbar/: _apps.html  _main.html  _profile.html
app/blueprints/backend/templates/admin/sensors/: index.html  show.html
app/blueprints/backend/templates/admin/workouts/: index.html
app/blueprints/backend/templates/includes/: _sidebar.html
app/blueprints/backend/templates/includes/topbar/: _main.html
app/blueprints/backend/templates/sensors/: index.html  show.html
app/blueprints/frontend/: __init__.py
app/blueprints/frontend/templates/: home.html  workout.html
app/blueprints/frontend/templates/frontend/: home.html  info.html  workouts.html
app/blueprints/frontend/templates/frontend/includes/: color_dropdown.html  info_modals.html  workout_cards.html
app/blueprints/frontend/templates/frontend/workouts/: control.html  start.html
app/blueprints/frontend/templates/workouts/: index.html  start.html
app/static/: package-lock.json  package.json  tailwind.config.js
app/static/css/: output.css
app/static/js/: workout.js
app/static/js/sockets/: init.js  logging.js  sensor_show.js  sensors_index.js  sensors_state.js  workout.js
app/static/js/sockets/logging/: dashboard_log.js  main.js  sensor_log.js
app/static/js/sweetalerts/: sensor_restart.js  sensors.js  sensors_delete.js
app/templates/: index.html  layout_auth.html  layout_backend.html  layout_frontend.html
app/templates/includes/: _flash.html  _logo.html  _navbar.html  _sidebar.html  _topbar.html
leds_test/: test_interrupt.py  test_led.py  test_meeloper.py  test_order.py  test_ripple.py
nginx/: Dockerfile  nginx.conf
tests/: __init__.py  conftest.py  ruff.toml
tests/functional/: __init__.py  test_auth.py  test_cli.py  test_dashboard.py  test_frontend.py  test_users.py
tests/unit/: __init__.py  test_cli.py  test_ledstrip.py  test_models.py  test_mqtt.py
